# AI-Codebase-Copilot

./: .gitignore  README.md
backend/: .env.example  check_arch_e2e.py  postman_collection.json  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/v1/: routes_admin.py  routes_chat.py  routes_conversations.py  routes_index.py  routes_projects.py  routes_search.py
backend/app/core/: api_response.py  config.py  http_client.py  roles.py  security.py
backend/app/db/: database.py  schema.py
backend/app/graph/: state.py  workflow.py
backend/app/graph/nodes/: answer.py  code_understanding.py  common.py  debugger.py  documentation.py  patch_generation.py  planner.py  (+4 more)
backend/app/llm/: model_router.py
backend/app/models/: api_models.py  domain_models.py
backend/app/services/: cache_service.py  indexing_service.py  qdrant_service.py  query_service.py
backend/app/tools/: file_tools.py  git_tools.py  safety.py  terminal_tools.py
backend/doc/: ARCHITECTURE.md  README.md
backend/scripts/: clear_db.py  init_pgvector.sql
backend/tests/: conftest.py
backend/tests/integration/: test_api_endpoints.py
backend/tests/unit/: test_api_models.py  test_ast_chunker.py  test_backend_api_admin_deps_schema_coverage.py  test_backend_core_additional_coverage.py  test_backend_dataflow_additional_coverage.py  test_backend_routes_auth_search_chat_repo_coverage.py  test_chat_streaming_and_http_client.py  test_indexing_service.py  test_planner.py  test_projects_conversations_routes.py  test_route_access.py  test_rrf.py  test_safety.py
(+107 files in other folders)
