[project]
name = "ai-codebase-copilot-backend"
version = "0.1.0"
description = "Agentic RAG backend for large code repositories"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "langgraph>=0.2.34",
  "langchain-core>=0.3.0",
  "sqlalchemy>=2.0.35",
  "psycopg[binary]>=3.2.1",
  "pgvector>=0.3.4",
  "tree-sitter>=0.24.0",
  "tree-sitter-language-pack>=0.4.0",
  "pathspec>=0.12.1",
  "orjson>=3.10.0",
  "httpx>=0.27.0",
  "redis>=5.2.1"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3.0",
  "pytest-cov>=6.0.0",
  "pytest-asyncio>=0.24.0",
  "ruff>=0.6.0",
  "mypy>=1.11.0"
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
pythonpath = ["."]
addopts = "--cov=app --cov-report=term-missing --cov-report=xml"
markers = [
  "live_integration: tests that hit a running backend and real services; opt-in via -m live_integration",
]

[tool.coverage.run]
branch = true

[tool.coverage.report]
skip_empty = true
